# rmfs-kris-gpu-2

./: .gitignore  CHANGELOG.md  CLAUDE.md  EVALUATE_USAGE_GUIDE.md  EXPERIMENT_MANAGER_USAGE.md  EXPERIMENT_WORKFLOW_GUIDE.md  GEMINI.md.md  HYBRID_MODE_GUIDE.md  PARALLEL_TRAINING_FIX_REPORT.md  PHASE_2_COMPLETION_REPORT.md  README.md  THESIS_EXPERIMENT_PARAMETERS.md  aggregate_results.py  check_system.py  clean_states.py  debug_nerl_state.py  debug_picking_station.py  debug_robot_routes.py  debug_robot_utilization.py  development_plan.md  diagnose_simulation.py  direct_assign_backlog.py  dqn_training_visualizer.py  emergency_plan.md  encoding_handler.py  energy_model_improvements.md  evaluate.py  evaluate_parallel.py  evaluate_simple.py  evaluation_manager.sh  evaluation_manager_fixed.sh  evaluation_manager_parallel.sh  evaluation_manager_usage.txt  fix_assign_orders.py  fix_intersection_attributes.md  fix_matplotlib_font.py  fix_parallel_csv.py  fix_robot_utilization.py  fix_runpod.sh  fix_simulation.py  (+44 more)
.claude/: settings.local.json
@notebook/: AI控制器新系統獎勵及逞罰.md  AI控制器的控制能力.md  NERL 進化方法詳解.md  NERL_RMFS優化研究計畫.md  NERL前的三個空間設置0708.md  NERL訓練機制.md  PHASE_1_5_USAGE_GUIDE.md  RMFS交通控制系統使用指南.md  倉庫時間對照表.md  實驗比較選手.md  實驗記錄20250708_舊版NERLvs舊版DQN.md  實驗記錄20250708_舊版的NERL設置上的三大問題.md  實驗記錄20250708效能評估與數據分析計畫.md  混合架構說明.md  環境安裝.md  統一評估框架設計計畫.md
ai/: adaptive_normalizer.py  deep_q_network.py  reward_helpers.py  traffic_controller.py  unified_reward_system.py  utils.py
analysis/: paper_analyzer.py
archive/: CHANGELOG.md  CLAUDE_協作指令.md  _experiment_manager.py
(+592 files in other folders)
